--- a/interfaces/kits/napi/accessibility_extension/BUILD.gn
+++ b/interfaces/kits/napi/accessibility_extension/BUILD.gn
@@ -43,7 +43,10 @@ ohos_shared_library("accessibilityextensionability_napi") {
     ":accessibility_extension_js",
   ]
 
-  external_deps = [ "napi:ace_napi" ]
+  external_deps = [
+    "ability_runtime:module_manager",
+    "napi:ace_napi",
+  ]
 
   relative_install_dir = "module/application"
   subsystem_name = "barrierfree"
