--- a/interfaces/kits/napi/accessibility_extension_context/BUILD.gn
+++ b/interfaces/kits/napi/accessibility_extension_context/BUILD.gn
@@ -45,7 +45,10 @@ ohos_shared_library("accessibilityextensioncontext_napi") {
     ":accessibility_extension_context_js",
   ]
 
-  external_deps = [ "napi:ace_napi" ]
+  external_deps = [
+    "ability_runtime:module_manager",
+    "napi:ace_napi",
+  ]
 
   relative_install_dir = "module/application"
   subsystem_name = "barrierfree"
