--- a/services/test/BUILD.gn
+++ b/services/test/BUILD.gn
@@ -133,7 +133,7 @@ ohos_moduletest("aams_accessibility_touch_guider_test") {
     "init:libbegetutil",
     "input:libmmi-client",
     "ipc:ipc_core",
-    "multimedia_image_framework:image_native",
+    "image_framework:image_native",
     "window_manager:libwm",
   ]
 }
@@ -212,7 +212,7 @@ ohos_moduletest("aams_accessibility_touchEvent_injector_test") {
     "init:libbegetutil",
     "input:libmmi-client",
     "ipc:ipc_core",
-    "multimedia_image_framework:image_native",
+    "image_framework:image_native",
     "window_manager:libwm",
   ]
 }
@@ -296,7 +296,7 @@ ohos_moduletest("aams_accessible_ability_channel_test") {
     "init:libbegetutil",
     "input:libmmi-client",
     "ipc:ipc_core",
-    "multimedia_image_framework:image_native",
+    "image_framework:image_native",
     "window_manager:libwm",
   ]
 }
@@ -378,7 +378,7 @@ ohos_moduletest("aams_server_test") {
     "init:libbegetutil",
     "input:libmmi-client",
     "ipc:ipc_core",
-    "multimedia_image_framework:image_native",
+    "image_framework:image_native",
     "window_manager:libwm",
   ]
 }
@@ -455,7 +455,7 @@ ohos_moduletest("aams_accessibility_keyevent_filter_test") {
     "init:libbegetutil",
     "input:libmmi-client",
     "ipc:ipc_core",
-    "multimedia_image_framework:image_native",
+    "image_framework:image_native",
     "window_manager:libwm",
   ]
 }
@@ -537,7 +537,7 @@ ohos_moduletest("aams_common_event_registry_test") {
     "init:libbegetutil",
     "input:libmmi-client",
     "ipc:ipc_core",
-    "multimedia_image_framework:image_native",
+    "image_framework:image_native",
     "window_manager:libwm",
   ]
 }
