--- a/services/aams/BUILD.gn
+++ b/services/aams/BUILD.gn
@@ -76,6 +76,7 @@ ohos_shared_library("accessibleabilityms") {
   external_deps = [
     "ability_base:want",
     "ability_runtime:ability_manager",
+    "ability_runtime:connection_callback",
     "bundle_framework:appexecfwk_core",
     "c_utils:utils",
     "common_event_service:cesfwk_innerkits",
